--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,14 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
     </dependencies>
+
 
     <build>
         <plugins>
